# manager-neo

./: .gitignore  README.md
.github/workflows/: ci-release.yml
backend/: Cargo.toml
backend/src/: api.rs  cli.rs  compose.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  runtime.rs  service.rs  store.rs  tui.rs  types.rs
backend/tests/: e2e_cli.rs  integration_api.rs  unit_store.rs
docs/: ARCHITECTURE.md  BACKEND.md  DEVELOPMENT.md  FRONTEND.md  TESTING.md  organize-migration-playbook.md
frontend/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/assets/: prime-overrides.css
frontend/src/components/: AppHeader.vue  AppMenu.vue
frontend/src/composables/: useTheme.ts
frontend/src/router/: index.ts
frontend/src/views/: InstancesView.vue  ModelsView.vue  TemplatesView.vue
