[package]
name = "manager-neo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "json"] }
bare-metal-gguf = "0.7.1"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.31"
include_dir = "0.7.4"
mime_guess = "2.0.5"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.3.3"

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.23.0"
tower = "0.5.2"
